2010-09-17	Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/SNMP/Nortel/ERS2500.pm, pf/README_SWITCHES, 
	pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php, pf/t/critic.t, 
	pf/t/hardware-snmp-objects.t, pf/t/pod.t: Added support for Nortel ERS 
	2500 Series.

2010-09-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Extreme/Summit.pm, 
	pf/lib/pf/SNMP/Extreme/Summit_X250e.pm, pf/lib/pf/SNMP/Extreme.pm, 
	pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php: 
	Re-worked port-security (MAC address Lockdown) support and added Voice
	over IP support for Extreme XOS. We removed the CLI requirement making
	it a production ready module. Thanks to Extreme Networks for sponsoring
	the feature and adding features to their ExtremeXOS making this 
	possible.

2010-09-17	Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/SNMP/Nortel/BayStack4500.pm, pf/README_SWITCHES, 
	pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php, pf/t/critic.t, 
	pf/t/hardware-snmp-objects.t, pf/t/pod.t: Added support for Nortel 4500
	Series. This module will replace the one for Nortel 4550 since the code
	is the same for the entire serie.

2010-09-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Added configuration
	instructions for Extreme in port security and Voice over IP. Module is
	now identified as covering the whole Extreme XOS series and previous
	limitations were removed since the code has been fixed.

2010-09-15	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/autodiscover.pl, pf/addons/loadMACintoDB.pl, 
	pf/lib/pf/node.pm, pf/sbin/pfdhcplistener, pf/UPGRADE: Removed print 
	statement from node_modify. Placed print statements in all callers that
	cares. This was an important blocker to put the captive portal in 
	mod_perl and to allow our web services back-end in trunk to work 
	reliably. Fixes #1068;